fix(07.2): address audit review findings