@@ -3,6 +3,7 @@ package com.vn.agent.rag.advisor;
 import com.vn.agent.AITestConfiguration;
 import com.vn.agent.audit.AuditWriter;
 import com.vn.agent.entity.AiAuditEvent;
+import com.vn.agent.entity.AiConversation;
 import com.vn.agent.orchestration.RunContext;
 import com.vn.agent.spi.AuditKind;
 import com.vn.agent.test_support.StubChatModelConfiguration;
@@ -21,6 +22,7 @@ import org.springframework.boot.autoconfigure.ImportAutoConfiguration;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.context.annotation.Import;
 
+import java.time.OffsetDateTime;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
@@ -28,7 +30,7 @@ import java.util.UUID;
 import static org.assertj.core.api.Assertions.assertThat;
 
 /**
- * Phase 7.2 success criterion 3 (D-09 round trip) — the AuditingDocumentRetriever decorator must
+ * Phase 7.2 success criterion 3 (D-09 round trip) â€” the AuditingDocumentRetriever decorator must
  * write exactly one RETRIEVAL child {@link AiAuditEvent} under the current chat turn's root,
  * populated with queryText / topK / hitCount / topScore / filtersJson from the delegate's
  * document list and from {@link RunContext} carriers.
@@ -57,8 +59,10 @@ class RetrievalAuditRoundTripTest {
         systemAuthenticator.runWithSystem(() -> {
             UUID runId = UUID.randomUUID();
             RunContext.set(runId);
+            UUID conversationId = createConversation();
+            RunContext.setConversationId(conversationId);
 
-            UUID rootId = auditWriter.writeChatStart(runId, "user-A", null, "hash");
+            UUID rootId = auditWriter.writeChatStart(runId, "user-A", conversationId, "hash");
             RunContext.setRootAuditId(rootId);
             RunContext.setRetrievalTopK(5);
             RunContext.setRetrievalFiltersJson("docType == 'faq'");
@@ -82,7 +86,7 @@ class RetrievalAuditRoundTripTest {
             List<AiAuditEvent> children = root.getChildren();
             assertThat(children).hasSize(1);
 
-            AiAuditEvent retrievalRow = children.get(0);
+            AiAuditEvent retrievalRow = children.getFirst();
             assertThat(retrievalRow.getKind()).isEqualTo(AuditKind.RETRIEVAL);
             assertThat(retrievalRow.getQueryText()).isEqualTo("what is foo?");
             assertThat(retrievalRow.getTopK()).isEqualTo(5);
@@ -92,9 +96,19 @@ class RetrievalAuditRoundTripTest {
             assertThat(retrievalRow.getOutcomeRaw()).isEqualTo("SUCCESS");
             assertThat(retrievalRow.getErrorClass()).isNull();
             assertThat(retrievalRow.getRunId()).isEqualTo(runId);
+            assertThat(retrievalRow.getConversation()).isNotNull();
+            assertThat(retrievalRow.getConversation().getId()).isEqualTo(conversationId);
             assertThat(retrievalRow.getParent()).isNotNull();
             assertThat(retrievalRow.getParent().getId()).isEqualTo(rootId);
         });
+    }
+
+    private UUID createConversation() {
+        AiConversation conversation = dataManager.create(AiConversation.class);
+        conversation.setTitle("conv-retrieval-fk");
+        conversation.setCreatedBy("user-A");
+        conversation.setCreatedDate(OffsetDateTime.now());
+        return dataManager.save(conversation).getId();
     }
 
     private static Document buildDoc(String id, double score) {
